# SysProg_2

./: CMakeLists.txt  a.out  logg.txt  main.c  main.out
functions/: help.c  main.c  prcs.c  usr.c
headers/: help.h  prcs.h  usr.h
